<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/my_background_light"
        android:layout_weight="3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120px"
            android:layout_marginTop="480px"
            android:text="@string/resetadid_title"
            android:textColor="@color/my_text_default"
            android:textSize="88pt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120px"
            android:layout_marginTop="36px"
            android:text="@string/reset_intro"
            android:textColor="@color/my_text_subtitle"
            android:textSize="36pt"/>
    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/my_background_dark"
        android:layout_weight="2">

        <Button
            android:id="@+id/ad_cancel"
            android:layout_marginTop="480px"
            android:paddingTop="54px"
            android:paddingBottom="42px"
            android:paddingHorizontal="66px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/my_text_default"
            android:background="@color/my_background_dark"
            android:text="@string/evset_unconsent"
            android:onClick="cancelHandler"/>
        <Button
            android:id="@+id/ad_active"
            android:paddingTop="54px"
            android:paddingBottom="42px"
            android:paddingHorizontal="66px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/my_text_default"
            android:background="@color/my_background_dark"
            android:text="@string/evset_consent"
            android:onClick="activeHandler"/>
    </LinearLayout>
</LinearLayout>