<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#2F344D"
    android:layout_gravity="center">

    <TextView
        android:layout_width="1000px"
        android:layout_height="48px"
        android:ellipsize="end"
        android:layout_marginTop="48px"
        android:layout_marginLeft="48px"
        android:text="@string/evopt_title"
        android:textSize="36px"
        android:textColor="@color/my_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="24px"
        android:background="#33FFFFFF" />
    <TextView
        android:layout_width="1000px"
        android:layout_height="wrap_content"
        android:layout_marginTop="18px"
        android:layout_marginHorizontal="48px"
        android:textSize="30px"
        android:textColor="@color/my_content"
        android:text="@string/evset_intro1"/>
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="48px"-->
        <!--android:layout_marginHorizontal="48px"-->
        <!--android:textSize="30px"-->
        <!--android:textColor="@color/my_content"-->
        <!--android:text="@string/evset_intro2"/>-->
    <TextView
        android:layout_width="1000px"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48px"
        android:textSize="30px"
        android:textColor="@color/my_content"
        android:text="@string/evset_intro3"/>

    <!--<TableRow-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginHorizontal="48px"-->
        <!--android:layout_marginTop="200px">-->
        <!--<ImageView-->
            <!--android:layout_width="180px"-->
            <!--android:layout_height="180px"-->
            <!--android:layout_weight="1"-->
            <!--android:src="@drawable/ic_acr"/>-->
        <!--<ImageView-->
            <!--android:layout_width="180px"-->
            <!--android:layout_height="180px"-->
            <!--android:layout_weight="1"-->
            <!--android:src="@drawable/ic_pm"/>-->
        <!--<ImageView-->
            <!--android:layout_width="180px"-->
            <!--android:layout_height="180px"-->
            <!--android:layout_weight="1"-->
            <!--android:src="@drawable/ic_sm"/>-->
        <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="180px"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="180px"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_weight="1"&ndash;&gt;-->
            <!--&lt;!&ndash;android:src="@drawable/ic_cr"/>&ndash;&gt;-->
    <!--</TableRow>-->

    <!--<TableRow-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginHorizontal="48px"-->
        <!--android:layout_marginTop="30px">-->
        <!--<TextView-->
            <!--android:layout_width="454px"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="@color/my_content"-->
            <!--android:layout_weight="1"-->
            <!--android:textAlignment="center"-->
            <!--android:text="@string/evset_function1"-->
            <!--android:textSize="30px" />-->
        <!--<TextView-->
            <!--android:layout_width="454px"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="@color/my_content"-->
            <!--android:layout_weight="1"-->
            <!--android:textAlignment="center"-->
            <!--android:text="@string/evset_function2"-->
            <!--android:textSize="30px" />-->
        <!--<TextView-->
            <!--android:layout_width="454px"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColor="@color/my_content"-->
            <!--android:layout_weight="1"-->
            <!--android:textAlignment="center"-->
            <!--android:text="@string/evset_function3"-->
            <!--android:textSize="30px" />-->
        <!--&lt;!&ndash;<TextView&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="454px"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:textColor="@color/my_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_weight="1"&ndash;&gt;-->
            <!--&lt;!&ndash;android:textAlignment="center"&ndash;&gt;-->
            <!--&lt;!&ndash;android:text="@string/evset_function4"&ndash;&gt;-->
            <!--&lt;!&ndash;android:textSize="30px" />&ndash;&gt;-->
    <!--</TableRow>-->


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60px"
        android:layout_marginHorizontal="168px"
        android:layout_marginTop="100px"
        android:layout_marginBottom="100px">
    <Button
        android:id="@+id/unconsent"
        android:layout_width="720px"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24px"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:textColor="@color/my_button_content"
        android:text="@string/evset_unconsent"
        android:onClick="cancelHandler">
        <requestFocus />
    </Button>
    <Button
        android:id="@+id/consent"
        android:layout_width="720px"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24px"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:textColor="@color/my_button_content"
        android:text="@string/evset_consent"
        android:onClick="activeHandler"/>
    </TableRow>
</LinearLayout>